--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       color: #28a745;
       margin-top: 20px;
       display: none;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
     }
   </style>
 </head>
